Solved compiling on x86_64

--- a/configure.in
+++ b/configure.in
@@ -73,6 +73,12 @@ dnl CROSS_COMPILE is set for non-native builds (we assume the build
 dnl machine is an i?86) based on the $CC prefix
 machine=`($CC -dumpmachine)`
 case $machine in
+ x86_64-*-*) 	AC_SUBST(OBJECT_X86, 1)
+		AC_SUBST(DOBJ_TARGET, "-DOBJECT_X86=1")
+		AC_SUBST(ARCH, x86)
+		if test -e "/lib/modules/`uname -r`/source"; then
+		   AC_SUBST(KERNELSOURCE, "/lib/modules/`uname -r`/source")
+		fi;;
  i?86-*-*) 	AC_SUBST(OBJECT_X86, 1)
 		AC_SUBST(DOBJ_TARGET, "-DOBJECT_X86=1")
 		AC_SUBST(ARCH, x86)
